--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,14 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.7,<3.11"
 Pillow = "^9.2.0"
 requests = "^2.28.1"
-
-[tool.poetry.dev-dependencies]
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20.0"
 black = "^22.8.0"
+pyinstaller = "^5.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
