--- a/.github/workflows/python-linux.yaml
+++ b/.github/workflows/python-linux.yaml
@@ -12,11 +12,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
+          cache: poetry
       - name: Install Poetry dependencies
         run: poetry install
       - name: Build Linux portable app
