--- a/.github/workflows/python-linux.yaml
+++ b/.github/workflows/python-linux.yaml
@@ -1,4 +1,4 @@
-name: Build Linux
+name: Build App
 on:
   push:
     branches:
@@ -8,7 +8,19 @@ on:
       - main
 jobs:
   build:
-    runs-on: ubuntu-latest
+    name: Build for ${{ matrix.platform }}
+    strategy:
+      matrix:
+        platform: [linux, windows ]
+        include:
+          - platform: linux
+            runs-on: ubuntu-latest
+            build-script: ./build-linux.sh
+          - platform: windows
+            runs-on: windows-latest
+            build-script: build-windows.ps
+
+    runs-on: ${{ matrix.runs-on }}
 
     steps:
       - uses: actions/checkout@v3
@@ -24,11 +36,11 @@ jobs:
       - name: Install Poetry dependencies
         run: poetry install
 
-      - name: Build Linux portable app
-        run: ./build-linux.sh
+      - name: Build portable app
+        run: ${{ matrix.build-script }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: linux-app
+          name: ${{ matrix.platform }}-app
           path: dist/
